# CodingStudy

exp1/: CMakeLists.txt  SeeIfOpenCVWorks.cpp  randomtest  randomtest.cpp
exp1/RedPic/: CMakeLists.txt  redpic.cpp
exp2/: CMakeLists.txt  shareLibTest.cpp  shareLibTest.h
exp3/: CMakeLists.txt  cvStudy.cpp
